@@ -203,6 +203,7 @@ Version 0.25.0:
 - #621: Parsing & overloading checks for argument lists of PASCAL procedures/constructors was broken
 - C backend: Backslashes in wstring literals were not escaped when emitting
 - Binary operation result types are more consistent now, for example "integer + uinteger" will now return a uinteger, just like "uinteger + integer"
+- Win32: When using a graphics window nearly as big as or bigger than the available screen space, the graphics window's size could be truncated by the system, for example causing GetMouse to return coordinates that didn't match the actual mouse position, at least under the DirectX driver. FB will now handle WM_GETMINMAXINFO to prevent the system from making the window smaller than requested.
 
 
 Version 0.24.0:
